--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 	<script src="app/controllers/logInCtrl.js"></script>
 	<script src="app/controllers/songListCtrl.js"></script>
 	<script src="app/controllers/addSongCtrl.js"></script>
+	<script src="app/controllers/registerController.js"></script>
+	<script src="app/factories/authfactory.js"></script>
 
 </body>
 </html>
